--- a/Collaborative Filtering.ipynb
+++ b/Collaborative Filtering.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -739,26 +739,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1790864, 2170439, 2203939], dtype=int64)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "movies = user_by_movie.loc[3][user_by_movie.loc[3].isnull() == False].index.values\n",
-    "\n",
-    "\n",
-    "movies\n"
+    "\n"
    ]
   },
   {
@@ -1317,13 +1302,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Edison Kinetoscopic Record of a Sneeze (1894)',\n",
+       " 'La sortie des usines Lumière (1895)',\n",
+       " 'The Arrival of a Train (1896)']"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "user_item = user_items[(user_items['rating']>=6) & (user_items['user_id'] == 1)]\n",
-    "user_item = user_item['movie_id']\n",
-    "user_item = user_item.to_numpy()\n"
+    "#print(movies.head(3))\n",
+    "\n",
+    "movies_liked  = list(movies[movies['movie_id'].isin([10,8,12])]['movie'])\n",
+    "movies_liked "
    ]
   },
   {
@@ -1386,7 +1385,8 @@
     "    movies - a list of movie names associated with the movie_ids\n",
     "    \n",
     "    '''\n",
-    "\n",
+    "    movies_list  = list(movies[movies['movie_id'].isin([movie_ids])]['movie'])\n",
+    "    \n",
     "    return movie_lst\n",
     "    \n",
     "    \n",
@@ -1400,7 +1400,7 @@
     "                          otherwise return the total number of recommendations available for the \"user\"\n",
     "                          which may just be an empty list\n",
     "    '''\n",
-    "\n",
+    "    \n",
     "    \n",
     "    return recommendations\n",
     "\n",
