--- a/Collaborative Filtering.ipynb
+++ b/Collaborative Filtering.ipynb
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1381,7 +1381,15 @@
     "    \n",
     "    return movies_list\n",
     "    \n",
-    "    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def make_recommendations(user, num_recs=10):\n",
     "    '''\n",
     "    INPUT:\n",
@@ -1422,7 +1430,15 @@
     "    recommendations = movie_names(recs)\n",
     "    \n",
     "    return recommendations\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def all_recommendations(num_recs=10):\n",
     "    '''\n",
     "    INPUT \n",
@@ -1462,12 +1478,39 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "assert all_recs[2] == make_recommendations(2), \"Oops!  Your recommendations for user 2 didn't match ours.\"\n",
     "assert all_recs[26] == make_recommendations(26), \"Oops!  It actually wasn't possible to make any recommendations for user 26.\"\n",
     "assert all_recs[1503] == make_recommendations(1503), \"Oops! Looks like your solution for user 1503 didn't match ours.\"\n",
     "print(\"If you made it here, you now have recommendations for many users using collaborative filtering!\")\n",
     "HTML('<img src=\"images/greatjob.webp\">')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['The Godfather (1972)']"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_names(68646)"
    ]
   },
   {
@@ -1480,6 +1523,13 @@
     "\n",
     "`8.` Let's do a quick recap of the steps taken to obtain recommendations using collaborative filtering.  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
